# tapto-code

./: .gitignore  CMakeLists.txt  NOTICE  README.md  claude.cpp  gemini.cpp  openai.cpp
.github/workflows/: ci.yml
ai/: aiconfig.h  log.h  tool_registry.h
contrib/: README.md  commands
include/tapto/: aibackend.h  aiconfig.h  claude.h  commands.h  config.h  context.h  gemini.h  log.h  openai.h  paths.h  tool_registry.h  tools.h  ui.h
src/: claude.cpp  commands.cpp  config.cpp  gemini.cpp  main.cpp  openai.cpp  paths.cpp  test_table.cpp  tools.cpp  ui.cpp
